--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10421,3 +10421,14 @@ a.text-dark:focus {
   display: none;
 }
 
+.fade-enter-active,
+.fade-leave-active {
+  -webkit-transition: opacity .5s;
+  transition: opacity .5s;
+}
+
+.fade-enter,
+.fade-leave-to {
+  opacity: 0;
+}
+
